# parallel-computing

./: .gitignore
lab1/: main.cpp
lab2/: main.cpp
lab3/: CMakeLists.txt  main.cpp  thread_pool.cpp  thread_pool.h
lab4/: CMakeLists.txt  client.cpp  server.cpp
lab4_python_client/pythonProject/: client.py
lab5/: CMakeLists.txt
lab5/client/: client.cpp
lab5/core/: thread_pool.cpp  thread_pool.h
lab5/server/: server.cpp
lab5/static/: page2.html
lab5_locust_testing/pythonProject/: locustfile.py
